--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,10 @@ tr.selected td {
 .leaflet-marker-nonLocalizedPhoto.nonLocalizedPhoto-marker{
     top: -10px;
 }
+.photo-tooltip {
+    max-width: 325px;
+    max-height: 325px;
+}
 
 .easy-button-button {
     margin: 0 !important;
