--- a/css/style.css
+++ b/css/style.css
@@ -391,15 +391,15 @@ table.editFavorite input[type=text] {
 #toggleDevicesButton button,
 .toggleDeviceButton button,
 #toggleTracksButton button,
-.toggleTrackButton button,
-.toggleCategoryButton button {
+.toggleTrackButton button
+{
     opacity: 1 !important;
 }
 #navigation-tracks > a,
 #navigation-devices > a,
 .track-line > a,
-.device-line > a,
-.category-line > a {
+.device-line > a
+{
     opacity: 1 !important;
 }
 #navigation-routing:not(.icon-loading-small) > a::before {
