refs #44 show/hide/update slider when layers are toggled

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
     width: 60%;
     height: 10px;
     background-color: var(--color-main-background) !important;
+    display: none;
 }
 .noUi-handle::after,
 .noUi-handle::before {
