--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,11 @@ tr.selected td {
     background: url('images/star-white.svg') no-repeat 50% 50%;
     background-size: 27px 27px;
 }
+.leaflet-marker-favorite-cluster,
+.favoriteMarker {
+    box-shadow: 0px 0px 10px #888;
+    border-radius: 50%;
+}
 .trackWaypoint {
     height: 25px !important;
     width: 25px !important;
