search bar now autocompletes and zooms on favorites
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.css
+++ b/css/style.css
@@ -596,3 +596,15 @@ tr.selected td {
     word-wrap: break-word;
     white-space: normal;
 }
+.searchCompleteIcon {
+    background-color: inherit;
+    border: 0px;
+    height: 35px;
+    padding-top: 15px;
+}
+.searchCompleteLink {
+    line-height: 35px;
+}
+.ui-autocomplete {
+    z-index: 9999;
+}
