larger routing geocoder completion results
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,9 @@ tr.selected td {
     text-align: center;
 }
 /* Overriden routing/geocoder style */
+.leaflet-routing-geocoder-result tr {
+    line-height: 35px;
+}
 /* hide button if placeholder is shown i.e. if field is empty */
 .leaflet-routing-geocoder > input:placeholder-shown + span {
     display: none;
