if geolocation available, add it to all search fields autocompletion
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.css
+++ b/css/style.css
@@ -546,6 +546,7 @@ tr.selected td {
 }
 .leaflet-routing-alt table {
     white-space: normal;
+    width: 100%;
 }
 .leaflet-routing-alt td:nth-child(2),
 .leaflet-routing-alt td:nth-child(3) {
