--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ tr.selected td {
     bottom: 18px;
     border-width: 12px 8px 0;
 }
+.leaflet-marker-track.track-marker:after,
 .leaflet-marker-device.device-marker:after {
     bottom: 18px;
     border-width: 12px 7px 0;
@@ -251,6 +252,7 @@ tr.selected td {
     border-width: 11px 8px 0;
 }
 .leaflet-marker-contact.contact-marker:after,
+.leaflet-marker-track.track-marker:after,
 .leaflet-marker-device.device-marker:after,
 .leaflet-marker-nonLocalizedPhoto.nonLocalizedPhoto-marker:after,
 .leaflet-marker-photo.photo-marker:after {
@@ -269,6 +271,7 @@ tr.selected td {
 
 .leaflet-marker-favorite-cluster .thumbnail,
 .leaflet-marker-contact .thumbnail,
+.leaflet-marker-track .thumbnail,
 .leaflet-marker-device .thumbnail,
 .leaflet-marker-nonLocalizedPhoto .thumbnail,
 .leaflet-marker-photo .thumbnail {
@@ -283,9 +286,11 @@ tr.selected td {
 .leaflet-marker-photo .thumbnail {
     border-radius: 2px;
 }
+.leaflet-marker-track .thumbnail,
 .leaflet-marker-device .thumbnail {
     background-size: 70%;
 }
+.leaflet-marker-track .thumbnail,
 .leaflet-marker-device .thumbnail,
 .leaflet-marker-contact .thumbnail {
     width: 101%;
@@ -300,6 +305,7 @@ tr.selected td {
     filter: grayscale(100%);
 }
 
+.leaflet-marker-track .label,
 .leaflet-marker-device .label,
 .leaflet-marker-contact .label,
 .leaflet-marker-favorite-cluster .label,
@@ -331,6 +337,7 @@ tr.selected td {
     padding: 1px;
 }
 
+.leaflet-marker-track,
 .leaflet-marker-device,
 .leaflet-marker-contact {
     border: 2px solid var(--color-main-background);
@@ -349,6 +356,7 @@ tr.selected td {
     border-radius: var(--border-radius);
 }
 
+.leaflet-marker-track.track-marker,
 .leaflet-marker-device.device-marker,
 .leaflet-marker-contact.contact-marker {
     top: -10px;
