refs #56 routing is now working with osrm, osrm demo and graphhopper
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/adminSettings.css
+++ b/css/adminSettings.css
@@ -1,3 +1,8 @@
-#osrmURL {
-    width: 200px;
+#osrmBikeURL,
+#osrmCarURL,
+#osrmFootURL,
+#graphhopperURL,
+#graphhopperAPIKEY
+{
+    width: 400px;
 }
