Adjust map container background to theme
Signed-off-by: Jan-Christoph Borchardt <hey@jancborchardt.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -70,6 +70,10 @@
     box-sizing: content-box;
 }
 
+.leaflet-container {
+    background: var(--color-main-background);
+}
+
 .leaflet-control-layers-base {
     line-height: 30px;
 }
