--- a/css/style.scss
+++ b/css/style.scss
@@ -19,11 +19,26 @@
 #search-submit {
     position: absolute;
     padding: 10px 19px;
+    top: -2px;
+    right: 38px;
+    margin: 0;
+    border: none;
+    background-color: transparent;
+}
+#route-submit {
+    position: absolute;
+    padding: 10px 19px;
     right: 0;
     top: -2px;
     margin: 0;
     border: none;
     background-color: transparent;
+}
+
+#routing-close {
+    float: right;
+    border: none;
+    margin: 0px 0px 0px 0px !important;
 }
 
 #timeRangeSlider {
@@ -225,9 +240,9 @@ tr.selected td {
     background-color: var(--color-main-background);
     color: var(--color-main-text);
 }
-.leaflet-top.leaflet-left {
+/*.leaflet-top.leaflet-left {
     top: 50px;
-}
+}*/
 .leaflet-popup-content h2, .leaflet-popup-content h3 {
     margin-bottom: 0px;
 }
@@ -485,7 +500,7 @@ tr.selected td {
     overflow: hidden;
 }
 #router-select {
-    margin-left: 6px;
+    float: left;
 }
 #navigation-routing:not(.icon-loading-small) > a::before {
     content: "\f4d7";
@@ -546,6 +561,7 @@ tr.selected td {
 }
 .leaflet-routing-geocoders {
     border-bottom: 0;
+    padding-right: 0;
 }
 .leaflet-routing-alternatives-container:not(:empty) {
     border-top: 1px solid var(--color-border);
