show address type in contact popup
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -558,6 +558,10 @@ tr.selected td {
     margin-right: 35px;
 }
 
+.tooltip-contact-address-type {
+    width: 100%;
+    text-align: center;
+}
 .tooltip-contact-address {
     width: 150px;
     text-align: center;
