click on contact: open popup with info
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -558,6 +558,15 @@ tr.selected td {
     margin-right: 35px;
 }
 
+.contactPopup a {
+    width: 100%;
+    text-align: center;
+    display: block;
+}
+.contactPopup {
+    width: 165px;
+}
+
 .tooltip-contact-address-type {
     width: 100%;
     text-align: center;
