add 'place contact' button in search result popups
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -721,6 +721,7 @@ tr.selected td {
     width: 1px;
     margin-left: -5px;
 }
+.search-place-contact,
 .search-add-favorite {
     margin-left: auto;
     margin-right: auto;
