improve favorite tooltip style
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -389,6 +389,10 @@ tr.selected td {
     padding: 3px;
 }
 
+.leaflet-marker-favorite-tooltip {
+    width: 300px;
+}
+
 .leaflet-marker-favorite-tooltip,
 .leaflet-marker-device-tooltip,
 .leaflet-marker-track-tooltip,
