add 'no routing engine' warning, remove debug log, add protection against 'user' contacts, update docstring
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -610,6 +610,10 @@ tr.selected td {
     width: 100%;
     text-align: center;
 }
+.no-routing-engine-warning {
+    width: 100%;
+    text-align: center;
+}
 /* Overriden routing/geocoder style */
 .leaflet-routing-container {
     width: 350px;
