add 'export current route' button in routing area
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -546,6 +546,23 @@ tr.selected td {
     /* waiting for a better solution */
     overflow: hidden;
 }
+.exportCurrentRoute {
+    margin-top: 5px !important;
+    margin-bottom: 2px !important;
+    float: right !important;
+    padding: 0 !important;
+    line-height: initial !important;
+    min-height: 2px !important;
+    height: 25px !important;
+    width: 25px !important;
+}
+.exportCurrentRoute span{
+    line-height: initial;
+}
+.exportCurrentRoute span::after{
+    font-weight: normal;
+    content: '\1F4BE';
+}
 #router-select {
     float: left;
 }
